# zfs-incremental-backup

./: .gitignore  Cargo.toml  Costs.ods  README.md  create_zpool.sh  delete_all_buckets.sh  docker-compose.yml  flake.nix  sample restore sqs message.json  sample test event.json  test.py  zpool.json
src/: auto_back.rs  auto_back_cli.rs  aws_s3_prices.rs  aws_test.rs  backup.rs  backup_command.rs  backup_config.rs  backup_data.rs  backup_steps.rs  change_password_command.rs  check_key.rs  check_password_command.rs  chunks_stream.rs  command_error.rs  config.rs  create_bucket.rs  create_immutable_key.rs  create_sqs.rs  decrypt_immutable_key.rs  derive_key.rs  diff_entry.rs  diff_or_first.rs  encrypt_stream.rs  encryption_password.rs  encryption_test.rs  file_meta_data.rs  get_account_id.rs  get_config.rs  get_data.rs  get_encrypted_snapshot_name.rs  get_hasher.rs  get_snapshot_len.rs  init.rs  init_auto_back_cli.rs  init_cli.rs  init_command.rs  init_encryption_data.rs  main.rs  optimize_diff_entries.rs  parse_storage_class.rs  (+25 more)
