[package]
name = "zfs-incremental-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
clap = { version = "4.5.51", features = ["derive"] }
rcs3ud = { version = "0.1.0", path = "../rcs3ud" }
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
zfs_wrapper = { version = "0.1.0", path = "../zfs_wrapper" }
