[package]
name = "zfs-incremental-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
clap = { version = "4.5.51", features = ["derive"] }
rcs3ud = { version = "0.1.0", git = "https://github.com/ChocolateLoverRaj/rcs3ud", rev = "68f0642cf3694ed03b733a3015cd779a2ac4b4d9" }
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
zfs_wrapper = { version = "0.1.0", git = "https://github.com/ChocolateLoverRaj/zfs_wrapper", rev = "b4a6eb871dc86d1ac7bb0ceb8d3d3550e9d7dd6a" }
